@@ -10,6 +10,7 @@ Version 8.5.0
   - If no date\time is specified, then dxf_events_sample is not subscribed to time series.
   - dxf_ipf_connect_sample: added an ability to set bearer token
   - Added XML documentation for all public\protected API entities (interfaces, methods, classes etc.)
+  - The DayUtil class is now public
 
 Version 8.4.1
 * [DXFC-264] Added assembly and deployment of XML documentation
